# reachy-claude-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: CLAUDE.md
src/reachy_claude_mcp/: __init__.py  action_queue.py  config.py  database.py  llm_analyzer.py  llm_backends.py  memory.py  robot_controller.py  server.py  tts.py  vector_store.py
