[project]
name = "reachy-claude-mcp"
version = "0.1.0"
description = "MCP server integrating Reachy Mini robot with Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sam McHardy"}
]
keywords = [
    "mcp",
    "claude",
    "claude-code",
    "robot",
    "reachy",
    "reachy-mini",
    "coding-assistant",
    "ai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "reachy-mini[mujoco]>=0.1.0",
    "piper-tts>=1.2.0",
    "mcp[cli]>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
llm = [
    "mlx-lm>=0.19.0",
]
memory = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.6.0",
]
all = [
    "mlx-lm>=0.19.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/mchardysam/reachy-claude-mcp"
Repository = "https://github.com/mchardysam/reachy-claude-mcp"
Issues = "https://github.com/mchardysam/reachy-claude-mcp/issues"

[project.scripts]
reachy-claude = "reachy_claude_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
